--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ mccabe==0.7.0
 multidict==6.0.4
 mypy-extensions==1.0.0
 nodeenv==1.8.0
+oauthlib==3.2.2
 openai==0.28.0
 packaging==23.1
 pathspec==0.11.2
@@ -34,6 +35,7 @@ pyflakes==3.1.0
 pytz==2023.3
 PyYAML==6.0.1
 requests==2.31.0
+requests-oauthlib==1.3.1
 soupsieve==2.4.1
 sqlparse==0.4.4
 tomli==2.0.1
