--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ charset-normalizer==3.2.0
 click==8.1.7
 distlib==0.3.7
 Django==4.2.4
+django-cors-headers==4.2.0
 djangorestframework==3.14.0
 filelock==3.12.2
 flake8==6.1.0
