--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ djangorestframework==3.14.0
 filelock==3.12.2
 flake8==6.1.0
 frozenlist==1.4.0
+gunicorn==21.2.0
 identify==2.5.27
 idna==3.4
 isort==5.12.0
@@ -33,6 +34,7 @@ pre-commit==3.3.3
 psycopg2-binary==2.9.7
 pycodestyle==2.11.0
 pyflakes==3.1.0
+python-dotenv==1.0.0
 pytz==2023.3
 PyYAML==6.0.1
 requests==2.31.0
