--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,7 @@
-DB_NAME=engage
-DB_HOST=localhost
+DB_NAME=asgard
 DB_USER=postgres
 DB_PASSWORD=postgres
+DB_HOST=asgard.cifztxndy8sd.ap-south-1.rds.amazonaws.com
 DB_PORT=5432
+DEBUG=True
+SECRET_KEY=+12gn9s6v&(5^l9m--yct620on9ur86%fk(6*ux$p8wn-!v*z2
