--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,7 @@ pytz==2023.3
 PyYAML==6.0.1
 requests==2.31.0
 requests-oauthlib==1.3.1
+sentry-sdk==1.31.0
 soupsieve==2.4.1
 sqlparse==0.4.4
 tomli==2.0.1
