--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiohttp==3.8.5
 aiosignal==1.3.1
 asgiref==3.7.2
 async-timeout==4.0.3
+asyncio==3.4.3
 attrs==23.1.0
 backports.zoneinfo==0.2.1
 beautifulsoup4==4.12.2
