--- a/requirements.txt
+++ b/requirements.txt
@@ -7,45 +7,66 @@ attrs==23.1.0
 backports.zoneinfo==0.2.1
 beautifulsoup4==4.12.2
 black==23.7.0
+Brotli==1.1.0
 certifi==2023.7.22
 cfgv==3.4.0
 charset-normalizer==3.2.0
 click==8.1.7
+colorama==0.4.6
+discum==1.4.1
 distlib==0.3.7
 Django==4.2.4
 django-cors-headers==4.2.0
 djangorestframework==3.14.0
+dnspython==2.4.2
 filelock==3.12.2
+filetype==1.2.0
 flake8==6.1.0
 frozenlist==1.4.0
 gunicorn==21.2.0
 identify==2.5.27
 idna==3.4
 isort==5.12.0
+joblib==1.3.2
 mccabe==0.7.0
 multidict==6.0.4
 mypy-extensions==1.0.0
+nltk==3.8.1
 nodeenv==1.8.0
+numpy==1.26.2
 oauthlib==3.2.2
 openai==0.28.0
 packaging==23.1
+pandas==2.1.4
 pathspec==0.11.2
 platformdirs==3.10.0
 pre-commit==3.3.3
 psycopg2-binary==2.9.7
+pyaes==1.6.1
+pyasn1==0.5.1
 pycodestyle==2.11.0
 pyflakes==3.1.0
+pymongo==4.6.1
+python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3
 PyYAML==6.0.1
+regex==2023.12.25
 requests==2.31.0
 requests-oauthlib==1.3.1
+requests-toolbelt==1.0.0
+rsa==4.9
 sentry-sdk==1.31.0
+six==1.16.0
 soupsieve==2.4.1
 sqlparse==0.4.4
+Telethon==1.33.1
 tomli==2.0.1
 tqdm==4.66.1
 typing_extensions==4.7.1
+tzdata==2023.3
+ua-parser==0.18.0
 urllib3==2.0.4
 virtualenv==20.24.3
+websocket-client==0.59.0
 yarl==1.9.2
